[package]
name = "zeus"
version = "0.1.1"
authors = ["Pierre-Henri Bourdeau <phbasic@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/bourdeau/zeus/"
repository = "https://github.com/bourdeau/zeus/"
license = "Apache-2.0"
keywords = ["rust", "api", "rocket"]
publish = true


[dependencies]
async-stream = { version = "0.3.5" }
async-trait = { version = "0.1.68" }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
futures = { version = "0.3.28" }
futures-util = { version = "0.3.28" }
rocket = { version = "0.5.0-rc.1", features = [
  "json",
] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = [
  "tera",
] }
serde_json = { version = "1.0.96" }
tokio = "1.28.2"
serde = "1.0"

[dependencies.sea-orm]
version = "0.11.3"
features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
]

[dependencies.sea-orm-rocket]
features = ["rocket_okapi"]
version = "0.5.2"

[dependencies.sea-orm-migration]
version = "0.11.3"
features = [
  # Enable following runtime and db backend features if you want to run migration via CLI
  # "runtime-tokio-native-tls",
  # "sqlx-postgres",
]

[dependencies.rocket_okapi]
version = "0.8.0-rc.2"
features = ["rapidoc","rocket_db_pools"]

[dependencies.rocket_cors]
git = "https://github.com/lawliet89/rocket_cors.git"
rev = "54fae070"
default-features = false
