[package]
name = "zeus-grpc"
edition = "2021"
version = "0.1.1"
authors = ["Pierre-Henri Bourdeau <phbasic@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/bourdeau/zeus/zeus-grpc"
repository = "https://github.com/bourdeau/zeus/zeus-grpc"
license = "Apache-2.0"
keywords = ["rust", "grpc", "tonic"]
publish = true


[[bin]]
name = "zeusgrpcserver"
path = "src/main.rs"

[[bin]]
name = "zeusgrpccli"
path = "src/cli.rs"



[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
clap = { version = "4.1.4", features = ["derive"] }
tonic-reflection = "0.6.0"

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
futures-util = "0.3.25"
anyhow = "1"